fix: add compiler arguments