@@ -332,6 +332,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <proc>none</proc>
+                    <compilerArgs>
+                        <arg>--add-modules</arg><arg>java.se</arg>
+                        <arg>--add-exports</arg><arg>java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg><arg>java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg><arg>java.base/java.nio=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg><arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg><arg>java.management/sun.management=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg><arg>jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
                 <executions>
                     <execution>
